# Luizalabs

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
auth/: jwt_bearer.py  jwt_handler.py
config/: config.py
config/database/: populate.py  reset.py
database/: client.py  favorite.py  product.py
models/: __init__.py  client.py  favorite.py  product.py  user.py  users.py
resources/: messages_en.json  resources.py
routes/: client.py  favorite.py  product.py  user.py
tests/: conftest.py  test_auth.py  test_client.py  test_favorite.py  test_products.py
tests/auth/: test_auth.py
