[tool.poetry]
name = "luizalabs"
version = "0.1.0"
description = "Desafio Técnico Luizalabs"
authors = ["Matheus Muriel <matheus.muriel@outlook.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
