[tool.poetry]
name = "luizalabs"
version = "0.1.0"
description = "Desafio Técnico Luizalabs"
authors = ["Matheus Muriel <matheus.muriel@outlook.com>"]
license = "GPLv3"
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
beanie = "^1.29.0"
pydantic-settings = "^2.7.1"
pyjwt = "^2.10.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
pydantic = {extras = ["email"], version = "^2.10.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
